--- a/telemedicine.html
+++ b/telemedicine.html
@@ -199,7 +199,7 @@
       <div class="row telePage">
         <ul class="nav nav-tabs nav-fill px-2" style="flex-wrap: nowrap;">
           <li class="nav-item">
-            <a class="nav-link active fw-bold fs-5"  id="tab1" data-bs-toggle="tab" href="#content1">Mobile Nursing</a>
+            <a class="nav-link active fw-bold fs-5" id="tab1" data-bs-toggle="tab" href="#content1">Mobile Nursing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-bold fs-5" id="tab2" data-bs-toggle="tab" href="#content2">Hospital at Home</a>
@@ -208,10 +208,103 @@
 
         <!-- 分頁內容區域 -->
         <div class="tab-content mt-2">
-          <!-- 分頁 1 內容 -->
+          <!-- Mobile Nursing 內容 -->
           <div class="tab-pane fade show active" id="content1">
-            <h2>Mobile Nursing</h2>
-            <p>這是分頁 1 的內容。</p>
+            <p class="text-color_bk80">Healthcare services can be provided at any locations, utilizing personalized record tracking and monitoring to support long-term personal wellness.</p>
+            <div class="row row-cols-1 row-cols-md-2" style="margin-bottom:60px ;">
+              <div class="col ">
+                <h2 class="text-center">
+                  <span class="fs-5 text-style_pills-bk40 px-2 py-1"> Traditional process </span>
+                </h2>
+                <img src="./images/telemedicine/mobile_nursing-traditional.png" class="img-thumbnail border-0" alt="Traditional Process" />
+                <div class="card border-0 shadow-sm mb-3 ">
+                  <div class="row g-0 align-items-center">
+                    <div class="col-2 ">
+                      <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start" alt="..." />
+                    </div>
+                    <div class="col-10 ">
+                      <div class="card-body text-color_bk80">
+                        <h5 class="card-title fs-5 ">Patient Monitoring</h5>
+                        <p class="card-text">Conduct patient check-ups or being on call within specified hours.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card border-0 shadow-sm mb-3 ">
+                  <div class="row g-0 align-items-center">
+                    <div class="col-2 mx-auto">
+                      <img src="./images/telemedicine/icon-soso.png" class="img-fluid rounded-start " alt="..." />
+                    </div>
+                    <div class="col-10 ">
+                      <div class="card-body text-color_bk80 ">
+                        <h5 class="card-title fs-5 ">Patient self-management</h5>
+                        <p class="card-text">A doctor's note is needed to document details on medication and lifestyle modification</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card border-0 shadow-sm ">
+                  <div class="row g-0 align-items-center">
+                    <div class="col-2 ">
+                      <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start" alt="bad" />
+                    </div>
+                    <div class="col-10 ">
+                      <div class="card-body text-color_bk80 ">
+                        <h5 class="card-title fs-5 fw-bold">Preventive healthcare</h5>
+                        <p class="card-text">Passive reminder of personal health care information, and lack continuous monitoring system and personalized preventive program</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <h2 class="text-center">
+                  <span class="fs-5 text-style_pills-edasec px-2 py-1"> Telemedicine process </span>
+                </h2>
+                <img src="./images/telemedicine/mobile_nursing-telemedicine.png" class="img-thumbnail border-0" alt="Telemedicine Process" />
+                <div class="card border-0 shadow-sm mb-3 ">
+                  <div class="row g-0 align-items-center">
+                    <div class="col-2 ">
+                      <img src="./images/telemedicine/icon-good.png" class="img-fluid rounded-start" alt="good" />
+                    </div>
+                    <div class="col-10">
+                      <div class="card-body text-color_bk80">
+                        <h5 class="card-title fs-5 ">Patient Monitoring</h5>
+                        <p class="card-text">Real-time monitoring system allows immediate action to prevent the further worsening of patient's health condition</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card border-0 shadow-sm mb-3 ">
+                  <div class="row g-0 align-items-center">
+                    <div class="col-2 mx-auto">
+                      <img src="./images/telemedicine/icon-good.png" class="img-fluid rounded-start " alt="good" />
+                    </div>
+                    <div class="col-10">
+                      <div class="card-body text-color_bk80">
+                        <h5 class="card-title fs-5 ">Patient self-management</h5>
+                        <p class="card-text">Deliver up-to-date medical records, provide remote management, and identify personalized treatment plans.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card border-0 shadow-sm ">
+                  <div class="row g-0 align-items-center">
+                    <div class="col-2 ">
+                      <img src="./images/telemedicine/icon-good.png" class="img-fluid rounded-start" alt="good" />
+                    </div>
+                    <div class="col-10">
+                      <div class="card-body text-color_bk80">
+                        <h5 class="card-title fs-5 fw-bold ">Preventive healthcare</h5>
+                        <p class="card-text">Offer personalized health guidance and options considering risks and benefits, assist individuals in maintaining their overall well-being.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h2 class="fw-bold fs-2 text-color_bk80">Our Mobile Nursing</h2>
+            <p class="text-color_bk80">Designed for healthcare mobility, offers doctors and nurses efficient ways to enhance patient care by utilizing cloud-based records and addressing immediate or long-term needs on-site</p>
           </div>
 
           <!-- 分頁 2 內容 -->
