--- a/telemedicine.html
+++ b/telemedicine.html
@@ -171,7 +171,7 @@
           <div class="card border-0 shadow-sm mb-3 ">
             <div class="row g-0 align-items-center">
               <div class="col-2 mx-auto">
-                <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start " alt="bad" />
+                <img src="./images/telemedicine/icon-good.png" class="img-fluid rounded-start " alt="..." />
               </div>
               <div class="col-10">
                 <div class="card-body text-color_bk80">
@@ -184,7 +184,7 @@
           <div class="card border-0 shadow-sm ">
             <div class="row g-0 align-items-center">
               <div class="col-2 ">
-                <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start" alt="bad" />
+                <img src="./images/telemedicine/icon-good.png" class="img-fluid rounded-start" alt="..." />
               </div>
               <div class="col-10">
                 <div class="card-body text-color_bk80">
@@ -199,7 +199,7 @@
       <div class="row telePage">
         <ul class="nav nav-tabs nav-fill px-2" style="flex-wrap: nowrap;">
           <li class="nav-item">
-            <a class="nav-link active fw-bold fs-5" id="tab1" data-bs-toggle="tab" href="#content1">Mobile Nursing</a>
+            <a class="nav-link active fw-bold fs-5" id="tab1" data-bs-toggle="tab" href="#mobile_nursing">Mobile Nursing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-bold fs-5" id="tab2" data-bs-toggle="tab" href="#content2">Hospital at Home</a>
@@ -209,7 +209,7 @@
         <!-- 分頁內容區域 -->
         <div class="tab-content mt-2">
           <!-- Mobile Nursing 內容 -->
-          <div class="tab-pane fade show active" id="content1">
+          <div class="tab-pane fade show active" id="mobile_nursing">
             <p class="text-color_bk80">Healthcare services can be provided at any locations, utilizing personalized record tracking and monitoring to support long-term personal wellness.</p>
 
             <div class="row row-cols-1 row-cols-md-2" style="margin-bottom:60px ;">
@@ -305,7 +305,111 @@
               </div>
             </div>
             <h2 class="fw-bold fs-2 text-color_bk80">Our Mobile Nursing</h2>
-            <p class="text-color_bk80">Designed for healthcare mobility, offers doctors and nurses efficient ways to enhance patient care by utilizing cloud-based records and addressing immediate or long-term needs on-site</p>
+            <p class="text-color_bk80" style="margin-bottom: 60px;">Designed for healthcare mobility, offers doctors and nurses efficient ways to enhance patient care by utilizing cloud-based records and addressing immediate or long-term needs on-site.</p>
+            <div class="row">
+              <div class="col-12 col-sm-2">
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">Medical cart</button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                      <div class="accordion-body">
+                        <a href="./telemedicine.html#mobile_nursing_introduction"> Introduction </a>
+                        <a href="#mobile_nursing_applications"> Applications </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">Personalized care plan</button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                      <div class="accordion-body">
+                        <a href="#"> Introduction </a>
+                        <a href="#"> Applications </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">Emergency Medical Assitant</button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                      <div class="accordion-body">
+                        <a href="#"> Introduction </a>
+                        <a href="#"> Applications </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-10">
+                <div id="mobile_nursing_introduction" class="d-flex flex-column align-items-center justify-content-center">
+                  <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_mainPic.png" alt="Medical Cart MainPic" />
+                  <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Introduction</h3>
+                  <div class="row row-cols-2 row-cols-md-2">
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_introduction-01.png" alt="" />
+                      <p>Access cloud-patient records at point of care.</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_introduction-02.png" alt="" />
+                      <p>Respond to emergencies with rapid accessibility.</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_introduction-03.png" alt="" />
+                      <p>Track and manage accurate medication log.</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_introduction-04.png" alt="" />
+                      <p>Pharmaceutical and supplies storage.</p>
+                    </div>
+                  </div>
+                </div>
+                <div id="mobile_nursing_applications" class="d-flex flex-column align-items-center justify-content-center">
+                  <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_mainPic.png" alt="Medical Cart MainPic" />
+                  <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Applications</h3>
+                  <div class="row row-cols-2 row-cols-md-3">
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/hospital-yes.png" alt="" />
+                      <p class="fw-bold">Hospital</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0 " src="./images/telemedicine/operation_room-no.png" alt="" />
+                      <p class="p-color-40">Operation Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/patient_room-yes.png" alt="" />
+                      <p class="fw-bold">Patient Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_room-no.png" alt="" />
+                      <p class="p-color-40">Emergency Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/icu_room-yes.png" alt="" />
+                      <p class="fw-bold">ICU Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/home-no.png" alt="" />
+                      <p class="p-color-40">Home</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="row row-cols-2 row-cols-md-2 g-4">
+                  <div class="col d-grid">
+                    <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=886972887197&text=Hi%2C%20I%20got%20your%20WhatsApp%20information%20from%20your%20website." role="button"> Contact <i class="bi bi-wechat  ms-2"></i></a>
+                  </div>
+                  <div class="col d-grid">
+                    <button class="btn btn-primary" type="button">
+                      Share
+                      <i class="bi bi-share-fill ms-2"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- 分頁 2 內容 -->
