--- a/telemedicine.html
+++ b/telemedicine.html
@@ -105,7 +105,7 @@
         <p class="p-color-bk80">Revolutionize healthcare through telemedicine: enhancing convenience, efficiency, and personalization while ensuring high-quality care is accessible to everyone.</p>
       </div>
       <div class="row row-cols-1 row-cols-md-2" style="margin-bottom:60px ;">
-        <div class="col ">
+        <div class="col mb-3 mb-sm-0">
           <h2 class="text-center">
             <span class="fs-5 text-style_pills-bk40 px-2 py-1"> Traditional process </span>
           </h2>
@@ -213,7 +213,7 @@
             <p class="text-color_bk80">Healthcare services can be provided at any locations, utilizing personalized record tracking and monitoring to support long-term personal wellness.</p>
 
             <div class="row row-cols-1 row-cols-md-2" style="margin-bottom:60px ;">
-              <div class="col ">
+              <div class="col mb-3 mb-sm-0">
                 <h2 class="text-center">
                   <span class="fs-5 text-style_pills-bk40 px-2 py-1"> Traditional process </span>
                 </h2>
@@ -307,7 +307,7 @@
             <h2 class="fw-bold fs-2 text-color_bk80">Our Mobile Nursing</h2>
             <p class="text-color_bk80" style="margin-bottom: 60px;">Designed for healthcare mobility, offers doctors and nurses efficient ways to enhance patient care by utilizing cloud-based records and addressing immediate or long-term needs on-site.</p>
             <div class="row">
-              <div class="col-12 col-sm-2">
+              <div class="col-12 col-sm-2 h-100">
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -326,8 +326,8 @@
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                       <div class="accordion-body">
-                        <a href="#"> Introduction </a>
-                        <a href="#"> Applications </a>
+                        <a href="./telemedicine.html#personalized_care_plan_introduction"> Introduction </a>
+                        <a href="./telemedicine.html#personalized_care_plan_applications"> Applications </a>
                       </div>
                     </div>
                   </div>
@@ -337,13 +337,14 @@
                     </h2>
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                       <div class="accordion-body">
-                        <a href="#"> Introduction </a>
-                        <a href="#"> Applications </a>
+                        <a href="./telemedicine.html#emergency_medical_assitant_introduction"> Introduction </a>
+                        <a href="./telemedicine.html#emergency_medical_assitant_applications"> Applications </a>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+              <!-- mobile_nursing -->
               <div class="col-12 col-sm-10">
                 <div id="mobile_nursing_introduction" class="d-flex flex-column align-items-center justify-content-center">
                   <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_mainPic.png" alt="Medical Cart MainPic" />
@@ -368,7 +369,6 @@
                   </div>
                 </div>
                 <div id="mobile_nursing_applications" class="d-flex flex-column align-items-center justify-content-center">
-                  <img class="img-thumbnail border-0" src="./images/telemedicine/medical_cart_mainPic.png" alt="Medical Cart MainPic" />
                   <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Applications</h3>
                   <div class="row row-cols-2 row-cols-md-3">
                     <div class="col d-flex flex-column align-items-center justify-content-center">
@@ -408,14 +408,142 @@
                     </button>
                   </div>
                 </div>
+                <!-- personalized_care_plan -->
+                <div id="personalized_care_plan_introduction" class="d-flex flex-column align-items-center justify-content-center">
+                  <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_mainPic.png" alt="Personalized Care Solution MainPic" />
+                  <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Introduction</h3>
+                  <div class="row row-cols-2 row-cols-md-2">
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-01.png" alt="" />
+                      <p>PTZ Camera</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-02.png" alt="" />
+                      <p>Ultrasound Probe & EKG</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-03.png" alt="" />
+                      <p>Bluetooth Pulse Oximeter</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-04.png" alt="" />
+                      <p>Digital Stethoscope</p>
+                    </div>
+                  </div>
+                </div>
+                <div id="personalized_care_plan_applications" class="d-flex flex-column align-items-center justify-content-center">
+                  <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Applications</h3>
+                  <div class="row row-cols-2 row-cols-md-3">
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/hospital-no.png" alt="" />
+                      <p class="fw-bold">Hospital</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0 " src="./images/telemedicine/operation_room-yes.png" alt="" />
+                      <p class="p-color-40">Operation Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/patient_room-yes.png" alt="" />
+                      <p class="fw-bold">Patient Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_room-no.png" alt="" />
+                      <p class="p-color-40">Emergency Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/icu_room-yes.png" alt="" />
+                      <p class="fw-bold">ICU Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/home-no.png" alt="" />
+                      <p class="p-color-40">Home</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="row row-cols-2 row-cols-md-2 g-4">
+                  <div class="col d-grid">
+                    <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=886972887197&text=Hi%2C%20I%20got%20your%20WhatsApp%20information%20from%20your%20website." role="button"> Contact <i class="bi bi-wechat  ms-2"></i></a>
+                  </div>
+                  <div class="col d-grid">
+                    <button class="btn btn-primary" type="button">
+                      Share
+                      <i class="bi bi-share-fill ms-2"></i>
+                    </button>
+                  </div>
+                </div>
+                <!-- personalized_care_plan -->
+                <!-- emergency_medical_assitant -->
+                <div id="emergency_medical_assitant_introduction" class="d-flex flex-column align-items-center justify-content-center">
+                  <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_medical_assitant_mainPic.png" alt="Emergency Medical Assitant MainPic" />
+                  <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Introduction</h3>
+                  <div class="row row-cols-2 row-cols-md-2">
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-01.png" alt="" />
+                      <p>PTZ Camera</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-02.png" alt="" />
+                      <p>Ultrasound Probe & EKG</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-03.png" alt="" />
+                      <p>Bluetooth Pulse Oximeter</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-04.png" alt="" />
+                      <p>Digital Stethoscope</p>
+                    </div>
+                  </div>
+                </div>
+                <div id="emergency_medical_assitant_applications" class="d-flex flex-column align-items-center justify-content-center">
+                  <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Applications</h3>
+                  <div class="row row-cols-2 row-cols-md-3">
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/hospital-no.png" alt="" />
+                      <p class="fw-bold">Hospital</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0 " src="./images/telemedicine/operation_room-yes.png" alt="" />
+                      <p class="p-color-40">Operation Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/patient_room-yes.png" alt="" />
+                      <p class="fw-bold">Patient Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_room-no.png" alt="" />
+                      <p class="p-color-40">Emergency Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/icu_room-yes.png" alt="" />
+                      <p class="fw-bold">ICU Room</p>
+                    </div>
+                    <div class="col d-flex flex-column align-items-center justify-content-center">
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/home-no.png" alt="" />
+                      <p class="p-color-40">Home</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="row row-cols-2 row-cols-md-2 g-4">
+                  <div class="col d-grid">
+                    <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=886972887197&text=Hi%2C%20I%20got%20your%20WhatsApp%20information%20from%20your%20website." role="button"> Contact <i class="bi bi-wechat  ms-2"></i></a>
+                  </div>
+                  <div class="col d-grid">
+                    <button class="btn btn-primary" type="button">
+                      Share
+                      <i class="bi bi-share-fill ms-2"></i>
+                    </button>
+                  </div>
+                </div>
+                <!-- emergency_medical_assitant -->
+              </div>
+
+              <!-- 分頁 2 內容 -->
+              <div class="tab-pane fade" id="content2">
+                <h2>Hospital at Home</h2>
+                <p>這是分頁 2 的內容。</p>
               </div>
             </div>
-          </div>
-
-          <!-- 分頁 2 內容 -->
-          <div class="tab-pane fade" id="content2">
-            <h2>Hospital at Home</h2>
-            <p>這是分頁 2 的內容。</p>
           </div>
         </div>
       </div>
