telemedicine page-issue1

--- a/telemedicine.html
+++ b/telemedicine.html
@@ -478,20 +478,20 @@
                   <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Introduction</h3>
                   <div class="row row-cols-2 row-cols-md-2">
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-01.png" alt="" />
-                      <p>PTZ Camera</p>
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_medical_assitant_introduction-01.png" alt="High-speed Stable Wireless Connectivity" />
+                      <p>High-speed Stable Wireless Connectivity</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-02.png" alt="" />
-                      <p>Ultrasound Probe & EKG</p>
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_medical_assitant_introduction-02.png" alt="Not constrained by physical boundaries" />
+                      <p>Not constrained by physical boundaries</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-03.png" alt="" />
-                      <p>Bluetooth Pulse Oximeter</p>
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_medical_assitant_introduction-03.png" alt="Real-time status reporting" />
+                      <p>Real-time status reporting</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/personalized_care_solution_introduction-04.png" alt="" />
-                      <p>Digital Stethoscope</p>
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_medical_assitant_introduction-04.png" alt="Stable power supply" />
+                      <p>Stable power supply</p>
                     </div>
                   </div>
                 </div>
@@ -499,19 +499,19 @@
                   <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Applications</h3>
                   <div class="row row-cols-2 row-cols-md-3">
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/hospital-no.png" alt="" />
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/hospital-yes.png" alt="" />
                       <p class="fw-bold">Hospital</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0 " src="./images/telemedicine/operation_room-yes.png" alt="" />
+                      <img class="img-thumbnail border-0 " src="./images/telemedicine/operation_room-no.png" alt="" />
                       <p class="p-color-40">Operation Room</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/patient_room-yes.png" alt="" />
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/patient_room-no.png" alt="" />
                       <p class="fw-bold">Patient Room</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
-                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_room-no.png" alt="" />
+                      <img class="img-thumbnail border-0" src="./images/telemedicine/emergency_room-yes.png" alt="" />
                       <p class="p-color-40">Emergency Room</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
