--- a/telemedicine.html
+++ b/telemedicine.html
@@ -94,10 +94,10 @@
       </div>
     </nav>
     <!-- 1212 navbar↑ -->
-    <div class="container-xxl px-0" style="margin-bottom: 72px">
+    <!-- <div class="container-xxl px-0" style="margin-bottom: 72px">
       <img src="./images/about/hero-md-01.webp" alt="" class="w-100 d-md-none" />
       <img src="./images/about/hero-xxl-01.png" alt="" class="w-100 d-none d-md-block" />
-    </div>
+    </div> -->
 
     <div class="container-xxl" style="max-width: 1200px; margin-bottom: 72px">
       <div class="row">
@@ -721,7 +721,7 @@
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
                       <img class="img-thumbnail border-0" src="./images/telemedicine/icu_room-no.png" alt="" />
-                      <p class="fw-bold">ICU Room</p>
+                      <p class="p-color-40">ICU Room</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
                       <img class="img-thumbnail border-0" src="./images/telemedicine/home-yes.png" alt="" />
@@ -743,7 +743,7 @@
                 <!-- Bedside care solution -->
                 <!-- Comprehensive self-management -->
                 <div id="comprehensive_self-management_introduction" class="d-flex flex-column align-items-center justify-content-center">
-                  <img class="img-thumbnail border-0" src="./images/telemedicine/bedside_care_solution_mainPic.png" alt="Comprehensive self-management" />
+                  <img class="img-thumbnail border-0" src="./images/telemedicine/comprehensive_self-management-mainPic.png" alt="Comprehensive self-management" />
                   <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Introduction</h3>
                   <div class="row row-cols-2 row-cols-md-2">
                     <div class="col d-flex flex-column align-items-center justify-content-center">
@@ -785,7 +785,7 @@
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
                       <img class="img-thumbnail border-0" src="./images/telemedicine/icu_room-no.png" alt="" />
-                      <p class="fw-bold">ICU Room</p>
+                      <p class="p-color-40">ICU Room</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
                       <img class="img-thumbnail border-0" src="./images/telemedicine/home-yes.png" alt="" />
@@ -807,7 +807,7 @@
                 <!-- Comprehensive self-management -->
                 <!-- Homewide alert system -->
                 <div id="homewide_alert_system_introduction" class="d-flex flex-column align-items-center justify-content-center">
-                  <img class="img-thumbnail border-0" src="./images/telemedicine/bedside_care_solution_mainPic.png" alt="Homewide alert system MainPic" />
+                  <img class="img-thumbnail border-0" src="./images/telemedicine/homewide_alert_system_mainPic.png" alt="Homewide alert system MainPic" />
                   <h3 class="text-color_bk80 fw-bold fs-5 text-center my-3">Introduction</h3>
                   <div class="row row-cols-2 row-cols-md-2">
                     <div class="col d-flex flex-column align-items-center justify-content-center">
@@ -849,7 +849,7 @@
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
                       <img class="img-thumbnail border-0" src="./images/telemedicine/icu_room-no.png" alt="" />
-                      <p class="fw-bold">ICU Room</p>
+                      <p class="p-color-40">ICU Room</p>
                     </div>
                     <div class="col d-flex flex-column align-items-center justify-content-center">
                       <img class="img-thumbnail border-0" src="./images/telemedicine/home-yes.png" alt="" />
