--- a/medical-equipments.html
+++ b/medical-equipments.html
@@ -35,7 +35,7 @@
 
   <body>
     <!-- 1212 navbar↓ -->
-    <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3  shadow-sm" style="background-color: #fff;z-index: 1">
+    <nav id="navbarEquipments" class="navbar navbar-expand-lg  px-3  position-sticky top-0 shadow-sm" style="z-index: 3;background-color: #fff;">
       <a class="navbar-brand" href="./index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
     </nav>
     <!-- 1212 navbar↑ -->
     <div class="container-xxl">
-      <div data-bs-spy="scroll" data-bs-target="#navbarEquipments" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
+      <div data-bs-spy="scroll" data-bs-target="#navbarEquipments" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-white p-3 rounded-2" tabindex="0">
         <h4 id="Imaging_Solutions" style="color: #ff8500">Imaging Solutions</h4>
         <div class="row" style="border-top: 1px solid #828282">
           <div class="col-6 col-sm-3">
