--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </a> -->
 
     <!-- 1212 navbar↓ -->
-    <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary px-3  position-sticky top-0 shadow-sm" style="background-color: #fff;z-index: 1">
+    <nav id="navbarEquipments" class="navbar navbar-expand-lg  px-3  position-sticky top-0 shadow-sm" style="z-index: 3;background: #FFFffF" >
       <a class="navbar-brand" href="./index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
           <li class="nav-item nav-pills">
             <a class="nav-link px-3 active" aria-current="page" href="./index.html">Home</a>
           </li>
-          <li class="nav-item nav-pills dropdown" style="color: #595857">
+          <li class="nav-item nav-pills dropdown" style="color: rgb(89, 88, 87)">
             <a class="nav-link px-3  dropdown-toggle" href="./medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
               <li>
