現行網站內容

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </a> -->
 
     <!-- 1212 navbar↓ -->
-    <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary px-3  position-sticky top-0 shadow-sm" style="background-color: #fff;z-index: 3">
+    <nav id="navbarEquipments" class="navbar navbar-expand-lg  px-3  position-sticky top-0 shadow-sm" style="background-color: #fff;z-index: 3">
       <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,9 +52,9 @@
           <li class="nav-item nav-pills">
             <a class="nav-link px-3 active" aria-current="page" href="./index.html">Home</a>
           </li>
-          <li class="nav-item nav-pills">
+          <!-- <li class="nav-item nav-pills">
             <a class="nav-link px-3 " aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
-          </li>
+          </li> -->
           <li class="nav-item nav-pills dropdown" style="color: #595857">
             <a class="nav-link px-3  dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
@@ -162,7 +162,7 @@
         </div>
         <div class="content nth1" data-aos="fade-left" data-aos-duration="1500">
           <h2>Telemedicine</h2>
-          <p>MedAlliance leads the way in healthcare innovation. Our telemedicine solutions, IT solutions, mobile nursing, and patient infotainment tools are revolutionizing patient care.</p>
+          <p class="p-color-bk0">MedAlliance leads the way in healthcare innovation. Our telemedicine solutions, IT solutions, mobile nursing, and patient infotainment tools are revolutionizing patient care.</p>
           <!-- <button type="button" class="btn btn-secondary ">Secondary</button> -->
         </div>
       </div>
@@ -239,7 +239,7 @@
       <div class="item nth2 mb-3" style="overflow: hidden">
         <div class="content nth2" data-aos="fade-right" data-aos-duration="1500">
           <h2>Medical Equipments</h2>
-          <p>MedAlliance provides a comprehensive range of medical solutions, including top-tier personal protective gear, medical supplies, and diagnostic tools.</p>
+          <p class="p-color-bk0">MedAlliance provides a comprehensive range of medical solutions, including top-tier personal protective gear, medical supplies, and diagnostic tools.</p>
           <!-- <button type="button" class="btn btn-secondary">Secondary</button> -->
         </div>
         <div class="pic" data-aos="fade-left" data-aos-duration="2000">
