--- a/medical-equipments.html
+++ b/medical-equipments.html
@@ -35,7 +35,7 @@
 
   <body>
     <!-- 1212 navbar↓ -->
-    <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 1">
+    <nav id="navbarEquipments" class="navbar navbar-expand-lg  position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 1">
       <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,9 +46,9 @@
           <li class="nav-item nav-pills">
             <a class="nav-link px-3" aria-current="page" href="http://medalliance.com.tw/index.html">Home</a>
           </li>
-          <li class="nav-item nav-pills">
+          <!-- <li class="nav-item nav-pills">
             <a class="nav-link px-3 " aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
-          </li>
+          </li> -->
           <li class="nav-item nav-pills dropdown" style="color: #595857">
             <a class="nav-link px-3 active dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
@@ -101,7 +101,7 @@
     </nav>
     <!-- 1212 navbar↑ -->
     <div class="container-xxl">
-      <div data-bs-spy="scroll" data-bs-target="#navbarEquipments" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
+      <div data-bs-spy="scroll" data-bs-target="#navbarEquipments" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-white p-3 rounded-2" tabindex="0">
         <h4 id="Imaging_Solutions" class="fw-bold fs-5" style="color: #ff8500">Imaging Solutions</h4>
         <div class="row mb-3" style="border-top: 1px solid #828282">
           <div class="col-6 col-sm-3">
