--- a/medical-equipments/imaging_solutions/pediatric_bone_age_x-ray_system.html
+++ b/medical-equipments/imaging_solutions/pediatric_bone_age_x-ray_system.html
@@ -37,7 +37,7 @@
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
       <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="../../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
-      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -46,9 +46,9 @@
           <li class="nav-item nav-pills">
             <a class="nav-link px-3" aria-current="page" href="http://medalliance.com.tw/index.html">Home</a>
           </li>
-          <li class="nav-item nav-pills">
+          <!-- <li class="nav-item nav-pills">
             <a class="nav-link px-3 " aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
-          </li>
+          </li> -->
           <li class="nav-item nav-pills dropdown" style="color: #595857">
             <a class="nav-link px-3 active dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
@@ -216,7 +216,7 @@
     </footer>
     <!-- footer↑  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    
+
     <script>
       var swiper = new Swiper(".mySwiper", {
         spaceBetween: 10,
