--- a/medical-equipments.html
+++ b/medical-equipments.html
@@ -37,7 +37,7 @@
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg  position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 1">
       <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -164,7 +164,7 @@
                 <h5 class="card-title text-center fs-6 h-color-bk80">Model K+</h5>
                 <p class="card-text fw-lighter">Mobile Nursing Workstation Medical Cart</p>
               </div>
-              <a href="./medical-equipments/healthcare_it/model_k.html" class="btn btn-secondary rounded-pill fw-bold" style="text-decoration: none;">Read More</a>
+              <a href="./medical-equipments/healthcare_it/Model_K+.html" class="btn btn-secondary rounded-pill fw-bold" style="text-decoration: none;">Read More</a>
             </div>
           </div>
           <div class="col-6 col-sm-3">
