--- a/medical-equipments/healthcare_it/Model_K+.html
+++ b/medical-equipments/healthcare_it/Model_K+.html
@@ -155,20 +155,105 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">Model K+</td>
                   <!-- <td>30lbs</td>
                   <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">90 lbs</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+              </tbody>
+            </table>
+          </div>
+          <div class="col-12 col-md-10 mx-auto">
+            <h3 class="mb-3 fw-bold text-color_bk80">Specifications</h3>
+          </div>
+          <div class="col-12 col-md-10 mx-auto mb-2">
+            <table class="table table-striped table-hover">
+              <tbody>
+                <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Dimensions(w/o accessory)</th>
+                  <td class="p-color-bk80" style="color: #595857;">L640mm±30mm x W560mm±30mm x H1040mm±30mm</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Main desktop dimensions</th>
+                  <td class="p-color-bk80" style="color: #595857;">L600mm±30mm x W450mm±30mm</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Antimicrobial</th>
+                  <td class="p-color-bk80" style="color: #595857;">Bacteria & chemical resistant desktop</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Side board of cabinet</th>
+                  <td class="p-color-bk80" style="color: #595857;">ABS material</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Sub-desktop</th>
+                  <td class="p-color-bk80" style="color: #595857;">Extendable tablet under the left side of main desktop</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Cart handle</th>
+                  <td class="p-color-bk80" style="color: #595857;">Make user easily to move cabinet</td>
+                </tr>
+                <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Drawer</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Locking system</th>
+                  <td class="p-color-bk80" style="color: #595857;">
+                    Central-locking system <br />
+                    (Optional : add RFID locking system)
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">High quality slide</th>
+                  <td class="p-color-bk80" style="color: #595857;">Dual design allows for traditional pull-open preventing damages caused by usage</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Drawer dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">
+                    (1) Top drawer : STD keyboard drawer 3"x 14"x 16"<br />
+                    (2) 2nd drawer : STD 3" x 14"x 16"<br />
+                    (3) 3rd drawer : STD 3" x 14"x 16"<br />
+                    (4) 4th drawer : STD 3" x 14"x 16"<br />
+                    (5) 5th drawer : STD 3" x 14"x 16"
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Swivel casters</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster feature</th>
+                  <td class="p-color-bk80" style="color: #595857;">5" diameter swivel casters which design protects axle/bearing areas from hair</td>
+                </tr>
+                <tr>
+                  <td colspan="2" class=" fw-bold fs-5" style="color: #294076">Accessory</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Medical trash cans</th>
+                  <td class="p-color-bk80" style="color: #595857;">1pcs for general waste, the other one for infection waste</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Stainless basket</th>
+                  <td class="p-color-bk80" style="color: #595857;">Stainless basket for holding sharps disposal container, 1pcs</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Plastic basin</th>
+                  <td class="p-color-bk80" style="color: #595857;">Plastic basin for storage medical components, 2pcs</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Giant size ABS plastic container</th>
+                  <td class="p-color-bk80" style="color: #595857;">Giant size ABS plastic container on the right side of cart for medical components temporary storage, 2pcs</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">ABS plastic container</th>
+                  <td class="p-color-bk80" style="color: #595857;">Movable small size ABS plastic container, 6 pcs</td>
+                </tr>
               </tbody>
             </table>
           </div>
